# swagger.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.1",
   "info": {
-    "version": "0.2",
+    "version": "0.3",
     "title": "Your-pet Api docs",
     "description": "Api docs",
     "license": {
@@ -299,6 +299,15 @@
                   "properties": {}
                 },
                 "description": "User's notices"
+              },
+              "favorite": {
+                "type": "array",
+                "items": {
+                  "type": "object",
+                  "description": "User's favorite notices",
+                  "properties": {}
+                },
+                "description": "User's notices"
               }
             }
           }
@@ -315,7 +324,8 @@
             "avatarUrl": "//www.gravatar.com/avatar/eac541bd8d2d8b41da78fbdee0b1cf24",
             "verify": false,
             "pets": ["645d4191c7c53eb02fac410c", "645d4191c7c53eb02fac410c"],
-            "notices": ["645d4191c7c53eb02fac410c", "645d4191c7c53eb02fac410c"]
+            "notices": ["645d4191c7c53eb02fac410c", "645d4191c7c53eb02fac410c"],
+            "favorite": ["645d4191c7c53eb02fac410c", "645d4191c7c53eb02fac410c"]
           }
         }
       },
@@ -372,6 +382,15 @@
               "properties": {}
             },
             "description": "User's notices"
+          },
+          "favorite": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "description": "Notice object",
+              "properties": {}
+            },
+            "description": "User's favorite notices"
           }
         },
         "example": {
@@ -384,7 +403,8 @@
           "avatarUrl": "//www.gravatar.com/avatar/eac541bd8d2d8b41da78fbdee0b1cf24",
           "verify": false,
           "pets": ["645d4191c7c53eb02fac410c", "645d4191c7c53eb02fac410c"],
-          "notices": ["645d4191c7c53eb02fac410c", "645d4191c7c53eb02fac410c"]
+          "notices": ["645d4191c7c53eb02fac410c", "645d4191c7c53eb02fac410c"],
+          "favorite": ["645d4191c7c53eb02fac410c", "645d4191c7c53eb02fac410c"]
         }
       },
       "UpdateRequest": {
